# odds_data

./: .gitignore  database_config.py  hist_main_odds_results.json  pyproject.toml
notebooks/: local_db_conn_eda.ipynb  odds_api_eda.ipynb
processes/: backfill_historical_mlb_events.py  backfill_historical_mlb_main_odds.py  create_mlb_events_table.py  create_mlb_main_odds_table.py  historical_mlb_events_bucket_dump.py  historical_mlb_main_odds_bucket_dump.py  mlb_create_events_odds_table.py  mlb_create_events_table.py
tests/: test_mlb_event_main_odds_schema.py  test_mlb_events_table_for_duplicates.py
utils/: database_accessor.py  odds_api_accessor.py  odds_api_constants.py
